--- a/src/add-to-cart/index.html
+++ b/src/add-to-cart/index.html
@@ -9,49 +9,53 @@
   </head>
   <body class="bg-bg-add-to-cart h-screen flex justify-center items-center">
     <div
-      class="flex flex-col w-[250px] bg-white items-center gap-2 py-8 rounded-md shadow-lg"
+      class="flex flex-col md:flex-row md:basis-1/2 w-[250px] xl:justify-evenly bg-white items-center py-8 rounded-md shadow-lg"
     >
-      <div class="w-[100px]">
-        <img src="..\images\headphone.png" alt="headphone" />
+      <div class="pb-3">
+        <div class="w-[100px] md:w-[150px]">
+          <img src="..\images\headphone.png" alt="headphone" />
+        </div>
       </div>
-      <div class="bg-black text-white rounded-full px-4 text-xs">
-        Free Shipping
-      </div>
-      <div class="font-bold text-center text-sm px-4">
-        Razer Kraken Kitty Edt Gaming Headset Quartz
-      </div>
-      <div class="text-xs line-through">$799</div>
-      <div class="text-3xl font-bold">$599</div>
-      <div class="text-gray-400 text-[8px]">
-        This offer is valid until April 3rd or as long as stock lasts
-      </div>
-      <div class="">
-        <button
-          class="w-[200px] px-5 py-2 bg-[#3B82F6] hover:bg-[#1E4DD2] rounded-md text-white text-[10px] border-b-2 border-[#1E4DD2]"
-        >
-          Add to cart
-        </button>
-      </div>
+      <div class="flex flex-col gap-2 items-center">
+        <div class="bg-black text-white rounded-full px-4 text-xs">
+          Free Shipping
+        </div>
+        <div class="font-bold text-center text-sm px-4">
+          Razer Kraken Kitty Edt Gaming Headset Quartz
+        </div>
+        <div class="text-xs line-through">$799</div>
+        <div class="text-3xl font-bold">$599</div>
+        <div class="text-gray-400 text-[8px]">
+          This offer is valid until April 3rd or as long as stock lasts
+        </div>
+        <div class="">
+          <button
+            class="w-[200px] px-5 py-2 bg-[#3B82F6] hover:bg-[#1E4DD2] rounded-md text-white text-[10px] border-b-2 border-[#1E4DD2]"
+          >
+            Add to cart
+          </button>
+        </div>
 
-      <div class="text-[10px] text-left self-start mx-8">
-        <div
-          class="bg-green-600 w-[6px] h-[6px] rounded-full inline-block animate-blink"
-        ></div>
-        50+ pcs. in stock
-      </div>
-      <div>
-        <button
-          class="w-[200px] px-5 py-2 border-2 border-gray-200 hover:bg-white hover:scale-95 duration-100 ease-in-out rounded-md text-black font-semibold text-[10px]"
-        >
-          Add to cart
-        </button>
-      </div>
-      <div>
-        <button
-          class="w-[200px] px-5 py-2 border-2 border-gray-200 hover:bg-white hover:scale-95 duration-100 ease-in-out rounded-md text-black font-semibold text-[10px]"
-        >
-          Add to wishlist
-        </button>
+        <div class="text-[10px] text-left md:self-center self-start mx-8">
+          <div
+            class="bg-green-600 w-[6px] h-[6px] rounded-full inline-block animate-blink"
+          ></div>
+          50+ pcs. in stock
+        </div>
+        <div>
+          <button
+            class="w-[200px] px-5 py-2 border-2 border-gray-200 hover:bg-white hover:scale-95 duration-100 ease-in-out rounded-md text-black font-semibold text-[10px]"
+          >
+            Add to cart
+          </button>
+        </div>
+        <div>
+          <button
+            class="w-[200px] px-5 py-2 border-2 border-gray-200 hover:bg-white hover:scale-95 duration-100 ease-in-out rounded-md text-black font-semibold text-[10px]"
+          >
+            Add to wishlist
+          </button>
+        </div>
       </div>
     </div>
   </body>
